--- a/episode-list.html
+++ b/episode-list.html
@@ -5,26 +5,26 @@
 <meta http-equiv="cache-control" content="no-cache" />
 <meta http-equiv="pragma" content="no-cache" />
 <meta http-equiv="expires" content="0" />
-<link rel="stylesheet" href="stylesheets/style.css?v=701" />
-<link rel="stylesheet" href="stylesheets/lightbox.css?v=701" />
-<link rel="stylesheet" href="stylesheets/episode.css?v=701" />
+<link rel="stylesheet" href="stylesheets/style.css?v=726" />
+<link rel="stylesheet" href="stylesheets/lightbox.css?v=726" />
+<link rel="stylesheet" href="stylesheets/episode.css?v=726" />
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
 <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.24/jquery-ui.min.js"></script>
-<script src="javascripts/nn-sdk.js?v=701"></script>
-<script src="javascripts/jquery.mousewheel.min.js?v=701"></script>
-<script src="javascripts/jquery.ellipsis.js?v=701"></script>
-<script src="javascripts/jquery.blockUI.js?v=701"></script>
-<script src="javascripts/jquery.toggleval.min.js?v=701"></script>
-<script src="javascripts/jquery.cycle.all.js?v=701"></script>
-<script src="javascripts/jquery.tmpl.min.js?v=701"></script>
-<script src="javascripts/jquery.cookie.js?v=701"></script>
-<script src="javascripts/json2.js?v=701"></script>
-<script src="javascripts/purl.js?v=701"></script>
-<script src="javascripts/vertical.slider.js?v=701"></script>
-<script src="javascripts/config.js?v=701"></script>
-<script src="javascripts/controller.js?v=701"></script>
-<script src="javascripts/basic.js?v=701"></script>
-<script src="javascripts/episode.js?v=701"></script>
+<script src="javascripts/nn-sdk.js?v=726"></script>
+<script src="javascripts/jquery.mousewheel.min.js?v=726"></script>
+<script src="javascripts/jquery.ellipsis.js?v=726"></script>
+<script src="javascripts/jquery.blockUI.js?v=726"></script>
+<script src="javascripts/jquery.toggleval.min.js?v=726"></script>
+<script src="javascripts/jquery.cycle.all.js?v=726"></script>
+<script src="javascripts/jquery.tmpl.min.js?v=726"></script>
+<script src="javascripts/jquery.cookie.js?v=726"></script>
+<script src="javascripts/json2.js?v=726"></script>
+<script src="javascripts/purl.js?v=726"></script>
+<script src="javascripts/vertical.slider.js?v=726"></script>
+<script src="javascripts/config.js?v=726"></script>
+<script src="javascripts/controller.js?v=726"></script>
+<script src="javascripts/basic.js?v=726"></script>
+<script src="javascripts/episode.js?v=726"></script>
 <title>9x9.tv - Episode list</title>
 </head>
 <body>
@@ -347,7 +347,7 @@
 <div class="overlay-container">
 <div class="overlay-wrap fb-connect">
 <a href="#" class="btn-close">Close</a>
-<h4><img src="images/text_studio_setup.png" alt="" /></h4>
+<h4>{images/text_studio_setup.png}</h4>
 <p class="fb-connect">
 <span class="content">Connect to</span>
 <img src="images/icon_fb.png" alt="facebook" class="icon" />
@@ -363,7 +363,7 @@
 <div class="overlay-container">
 <div class="overlay-wrap restart-connect">
 <a href="#" class="btn-close">Close</a>
-<h4><img src="images/text_studio_setup.png" alt="" /></h4>
+<h4>{images/text_studio_setup.png}</h4>
 <div class="reconnect-func">
 <span class="content">Connect to</span>
 <img src="images/icon_fb.png" alt="facebook" class="icon" />
@@ -379,7 +379,7 @@
 <div class="overlay-container">
 <div class="overlay-wrap connect-fail">
 <a href="#" class="btn-close">Close</a>
-<h4><img src="images/text_studio_setup.png" alt="" /></h4>
+<h4>{images/text_studio_setup.png}</h4>
 <h5>Can not connect to Facebook correctly!</h5>
 <p class="content">Please try again and make sure you agree on all permissions.</p>
 <div class="overlay-btn">
@@ -393,7 +393,7 @@
 <div class="overlay-container">
 <div class="overlay-wrap disconnect-notice">
 <a href="#" class="btn-close">Close</a>
-<h4><img src="images/text_studio_setup.png" alt="" /></h4>
+<h4>{images/text_studio_setup.png}</h4>
 <h5>Account disconnected!</h5>
 <p class="content">{If you want to enable auto sharing again, please:}</p>
 <div class="overlay-btn">
@@ -407,7 +407,7 @@
 <div class="overlay-container">
 <div class="overlay-wrap disconnect">
 <a href="#" class="btn-close">Close</a>
-<h4><img src="images/text_studio_setup.png" alt="" /></h4>
+<h4>{images/text_studio_setup.png}</h4>
 <p class="content">Disconnecting account will also disable auto sharing for every channel. Are you sure you want to disconnect?</p>
 <div class="overlay-btn">
 <p class="btns btn-disconnect"><span><a href="#">Disconnect</a></span></p>
