--- a/epcurate-publish.html
+++ b/epcurate-publish.html
@@ -5,32 +5,32 @@
 <meta http-equiv="cache-control" content="no-cache" />
 <meta http-equiv="pragma" content="no-cache" />
 <meta http-equiv="expires" content="0" />
-<link rel="stylesheet" href="stylesheets/style.css?v=726" />
-<link rel="stylesheet" href="stylesheets/lightbox.css?v=726" />
-<link rel="stylesheet" href="stylesheets/uniform.css?v=726" />
-<link rel="stylesheet" href="stylesheets/jquery.datepick.css?v=726" />
-<link rel="stylesheet" href="stylesheets/epcurate.css?v=726" />
+<link rel="stylesheet" href="stylesheets/style.css?v=784" />
+<link rel="stylesheet" href="stylesheets/lightbox.css?v=784" />
+<link rel="stylesheet" href="stylesheets/uniform.css?v=784" />
+<link rel="stylesheet" href="stylesheets/jquery.datepick.css?v=784" />
+<link rel="stylesheet" href="stylesheets/epcurate.css?v=784" />
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
 <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.24/jquery-ui.min.js"></script>
-<script src="javascripts/nn-sdk.js?v=726"></script>
-<script src="javascripts/jquery.mousewheel.min.js?v=726"></script>
-<script src="javascripts/jquery.ellipsis.js?v=726"></script>
-<script src="javascripts/jquery.blockUI.js?v=726"></script>
-<script src="javascripts/jquery.toggleval.min.js?v=726"></script>
-<script src="javascripts/jquery.uniform.min.js?v=726"></script>
-<script src="javascripts/jquery.cycle.all.js?v=726"></script>
-<script src="javascripts/jquery.tmpl.min.js?v=726"></script>
-<script src="javascripts/jquery.cookie.js?v=726"></script>
-<script src="javascripts/jquery.ui.datepicker-en.js?v=726"></script>
-<script src="javascripts/jquery.ui.datepicker-zh.js?v=726"></script>
-<script src="javascripts/json2.js?v=726"></script>
-<script src="javascripts/purl.js?v=726"></script>
-<script src="javascripts/swfupload/swfupload.js?v=726"></script>
-<script src="javascripts/vertical.slider.js?v=726"></script>
-<script src="javascripts/config.js?v=726"></script>
-<script src="javascripts/controller.js?v=726"></script>
-<script src="javascripts/basic.js?v=726"></script>
-<script src="javascripts/epcurate.js?v=726"></script>
+<script src="javascripts/nn-sdk.js?v=784"></script>
+<script src="javascripts/jquery.mousewheel.min.js?v=784"></script>
+<script src="javascripts/jquery.ellipsis.js?v=784"></script>
+<script src="javascripts/jquery.blockUI.js?v=784"></script>
+<script src="javascripts/jquery.toggleval.min.js?v=784"></script>
+<script src="javascripts/jquery.uniform.min.js?v=784"></script>
+<script src="javascripts/jquery.cycle.all.js?v=784"></script>
+<script src="javascripts/jquery.tmpl.min.js?v=784"></script>
+<script src="javascripts/jquery.cookie.js?v=784"></script>
+<script src="javascripts/jquery.ui.datepicker-en.js?v=784"></script>
+<script src="javascripts/jquery.ui.datepicker-zh.js?v=784"></script>
+<script src="javascripts/json2.js?v=784"></script>
+<script src="javascripts/purl.js?v=784"></script>
+<script src="javascripts/swfupload/swfupload.js?v=784"></script>
+<script src="javascripts/vertical.slider.js?v=784"></script>
+<script src="javascripts/config.js?v=784"></script>
+<script src="javascripts/controller.js?v=784"></script>
+<script src="javascripts/basic.js?v=784"></script>
+<script src="javascripts/epcurate.js?v=784"></script>
 <title>9x9.tv - Episode Curation - Publish</title>
 </head>
 <body>
@@ -58,10 +58,10 @@
 
 <div id="epcurate-nav" class="publish">
 <div class="epcurate-nav-wrap">
-<h3><a href="#" id="epcurate-nav-back" class="btn-back">Back<span class="tip"><img src="images/bg_tip_top.png" alt="" /><span class="tip-left"><span class="tip-right"><span class="tip-middle langkey">Leave</span></span></span></span></a><a href="javascript:void(0);" class="langkey">Episode Curation</a></h3>
+<h3><a href="episode-list.html" id="epcurate-nav-back" class="btn-back">Back<span class="tip"><img src="images/bg_tip_top.png" alt="" /><span class="tip-left"><span class="tip-right"><span class="tip-middle langkey">Leave</span></span></span></span></a><a href="javascript:void(0);" class="langkey">Episode Curation</a></h3>
 <ul>
-<li class="publish on"><span class="nav-right"><span class="nav-middle langkey">Publish</span></span></li>
-<li class="curation"><a href="#" id="epcurate-nav-curation"><span class="nav-right"><span class="nav-middle langkey">Curation</span></span></a></li>
+<li class="curation off"><a href="epcurate-curation.html" id="epcurate-nav-curation"><span class="nav-right"><span class="nav-middle langkey">Curation</span></span></a></li>
+<li class="publish on"><a href="epcurate-publish.html" id="epcurate-nav-publish"><span class="nav-right"><span class="nav-middle langkey">Publish</span></span></a></li>
 </ul>
 </div>
 </div>
