--- a/index.html
+++ b/index.html
@@ -5,26 +5,26 @@
 <meta http-equiv="cache-control" content="no-cache" />
 <meta http-equiv="pragma" content="no-cache" />
 <meta http-equiv="expires" content="0" />
-<link rel="stylesheet" href="stylesheets/style.css?v=726" />
-<link rel="stylesheet" href="stylesheets/lightbox.css?v=726" />
-<link rel="stylesheet" href="stylesheets/channel.css?v=726" />
+<link rel="stylesheet" href="stylesheets/style.css?v=784" />
+<link rel="stylesheet" href="stylesheets/lightbox.css?v=784" />
+<link rel="stylesheet" href="stylesheets/channel.css?v=784" />
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
 <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.24/jquery-ui.min.js"></script>
-<script src="javascripts/nn-sdk.js?v=726"></script>
-<script src="javascripts/jquery.mousewheel.min.js?v=726"></script>
-<script src="javascripts/jquery.ellipsis.js?v=726"></script>
-<script src="javascripts/jquery.blockUI.js?v=726"></script>
-<script src="javascripts/jquery.toggleval.min.js?v=726"></script>
-<script src="javascripts/jquery.charcounter.min.js?v=726"></script>
-<script src="javascripts/jquery.tmpl.min.js?v=726"></script>
-<script src="javascripts/jquery.cookie.js?v=726"></script>
-<script src="javascripts/json2.js?v=726"></script>
-<script src="javascripts/purl.js?v=726"></script>
-<script src="javascripts/vertical.slider.js?v=726"></script>
-<script src="javascripts/config.js?v=726"></script>
-<script src="javascripts/controller.js?v=726"></script>
-<script src="javascripts/basic.js?v=726"></script>
-<script src="javascripts/channel.js?v=726"></script>
+<script src="javascripts/nn-sdk.js?v=784"></script>
+<script src="javascripts/jquery.mousewheel.min.js?v=784"></script>
+<script src="javascripts/jquery.ellipsis.js?v=784"></script>
+<script src="javascripts/jquery.blockUI.js?v=784"></script>
+<script src="javascripts/jquery.toggleval.min.js?v=784"></script>
+<script src="javascripts/jquery.charcounter.min.js?v=784"></script>
+<script src="javascripts/jquery.tmpl.min.js?v=784"></script>
+<script src="javascripts/jquery.cookie.js?v=784"></script>
+<script src="javascripts/json2.js?v=784"></script>
+<script src="javascripts/purl.js?v=784"></script>
+<script src="javascripts/vertical.slider.js?v=784"></script>
+<script src="javascripts/config.js?v=784"></script>
+<script src="javascripts/controller.js?v=784"></script>
+<script src="javascripts/basic.js?v=784"></script>
+<script src="javascripts/channel.js?v=784"></script>
 <title>9x9.tv - My Channels</title>
 </head>
 <body>
@@ -163,7 +163,7 @@
 </div>
 </div>
 </div>
-<p class="drag">move</p>
+<p class="drag"><span>move</span></p>
 </div>
 </div>
 </div>
