--- a/index.html
+++ b/index.html
@@ -121,13 +121,9 @@
 <div class="wrap">
 <div class="photo-list">
 <a href="/#!${id}" target="_blank">
-{{if cntEpisode == 0 && -1 !== $.inArray(moreImageUrl_1, [CMS_CONF.CHANNEL_DEFAULT_IMAGE, CMS_CONF.EPISODE_DEFAULT_IMAGE])}}
-<span>${nn._([CMS_CONF.PAGE_ID, 'channel-list', 'No Episodes'])}</span>
-{{/if}}
 <img src="images/icon_playlist.png" alt="" class="watermark" />
-<img src="${moreImageUrl_1}" alt="" width="152" height="86" class="img" />
-<img src="${moreImageUrl_2}" alt="" width="70" height="40" class="img" />
-<img src="${moreImageUrl_3}" alt="" width="70" height="40" class="img" />
+<img src="${moreImageUrl_1}" alt="" width="32" height="32" class="ch" />
+<img src="${moreImageUrl_2}" alt="" width="192" height="108" class="ep" />
 </a>
 </div>
 
