fix channel url from /#!1234 to /view?ch=1234 for playback
git-svn-id: http://everest.teltel.com:8080/repos/misc/9x9dev/trunk/nncms/src/main/webapp@4483 a0a5f996-2bb4-401c-8778-395c3c01700f

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 <div class="container-left">
 <div class="wrap">
 <div class="photo-list">
-<a href="/#!${id}" target="_blank">
+<a href="/view?ch=${id}" target="_blank">
 <img src="images/icon_playlist.png" alt="" class="watermark" />
 <img src="${moreImageUrl_1}" alt="" width="32" height="32" class="ch" />
 <img src="${moreImageUrl_2}" alt="" width="192" height="108" class="ep" />
