update for v3.3 signin , QA pass version
git-svn-id: http://everest.teltel.com:8080/repos/misc/9x9dev/trunk/nncms/src/main/webapp@4524 a0a5f996-2bb4-401c-8778-395c3c01700f

--- a/epcurate-info.html
+++ b/epcurate-info.html
@@ -33,16 +33,12 @@
 <div id="header">
   <p id="logo"></p>
   <ul id="nav">
-    <li id="home"><span><a href="/#!home">Home</a></span></li>
-    <li id="guide"><span><a href="/#!guide">Guide</a></span></li>
-    <li id="browse"><span><a href="/#!directory">Browse</a></span></li>
+    <li id="home"><span><a href="../" target="_blank">9x9.tv Official Web</a></span></li>
+    <li id="tv"><span><a href="../tv" target="_blank">Watch 9x9.tv on the Web</a></span></li>
     <li id="profile">
       <p id="btn-profile"></p>
       <p id="selected-profile">Guest</p>
       <ul id="profile-dropdown" class="dropdown">
-        <li><a id="profile-mypage" href="/#!curator=profileUrl">My page</a></li>
-        <li><a href="./">Studio</a></li>
-        <li><a href="/#!settings">Settings</a></li>
         <li><a id="profile-logout" href="/api/login">Log out</a></li>
       </ul>
     </li>
@@ -117,22 +113,8 @@
 <!--============================== footer start ==============================-->
 <p id="footer-control"></p>
 <div id="footer">
+  <span>© 2013 9x9.tv. All rights reserved.</span>
   <ul id="footer-list">
-    <li>
-      <p class="select-txt">About Us</p>
-      <p class="select-btn"></p>
-      <ul class="select-list">
-        <li><a href="/#!about=about">About us</a></li>
-        <li><a href="/#!about=help">Help</a></li>
-        <li><a href="/#!about=report">Feedback</a></li>
-        <li><a href="/#!about=terms">Terms & Policy</a></li>
-        <li><a href="/#!about=contact">Contact us</a></li>
-        <li><a href="/#!about=partners">Partners</a></li>
-        <li><a href="/#!about=curators">Curators</a></li>
-        <li><a href="/#!about=press">Press</a></li>
-        <li><a href="/#!about=contest">Curation Contest</a></li>
-      </ul>
-    </li>
     <li>
       <p class="select-txt">Language</p>
       <p class="select-btn"></p>
