--- a/signin.html
+++ b/signin.html
@@ -7,7 +7,8 @@
 <meta http-equiv="expires" content="0" />
 <link rel="stylesheet" href="stylesheets/style.css?v=912" />
 <link rel="stylesheet" href="stylesheets/lightbox.css?v=912" />
-<link rel="stylesheet" href="stylesheets/channel.css?v=912" />
+<link rel="stylesheet" href="stylesheets/uniform.css?v=912" />
+<link rel="stylesheet" href="stylesheets/portal.css?v=912" />
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
 <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.24/jquery-ui.min.js"></script>
 <script src="javascripts/nn-sdk.js?v=912"></script>
