"video number" (3.3 final req.)
git-svn-id: http://everest.teltel.com:8080/repos/misc/9x9dev/trunk/nncms/src/main/webapp@4622 a0a5f996-2bb4-401c-8778-395c3c01700f

--- a/epcurate-curation.html
+++ b/epcurate-curation.html
@@ -610,6 +610,7 @@ ${nn._([CMS_CONF.PAGE_ID, 'episode-storyboard', 'Episode storyboard'])} (<em id=
 {{/if}}
 {{/if}}
 {{/if}}
+<p class="order"><!-- dynamic rebuild video number after template render --></p>
 <p class="img">
 {{if ytDuration > 0}}
 <img src="${imageUrl}" alt="" width="80" height="45" />
