--- a/episode-list.html
+++ b/episode-list.html
@@ -350,7 +350,7 @@
 <p class="content">Are you sure you want to delete this episode?</p>
 <div class="overlay-btn">
 <p class="btns btn-no"><span><a href="#">No</a></span></p>
-<p class="btns btn-del"><span><a href="#">Delete</a></span></p>
+<p class="btns btn-del"><span><a href="#">Yes</a></span></p>
 </div>
 </div>
 </div>
@@ -363,7 +363,7 @@
 <p class="content">Unsaved changes will be lost, are you sure you want to leave?</p>
 <div class="overlay-btn">
 <p class="btns btn-no"><span><a href="#">No</a></span></p>
-<p class="btns btn-leave"><span><a href="#">Leave</a></span></p>
+<p class="btns btn-leave"><span><a href="#">Yes</a></span></p>
 </div>
 </div>
 </div>
@@ -436,7 +436,7 @@
 <h4 class="cms-setup">CMS Setup</h4>
 <p class="content">Disconnecting account will also disable auto sharing for every channel. Are you sure you want to disconnect?</p>
 <div class="overlay-btn">
-<p class="btns btn-no"><span><a href="#">{No}</a></span></p>
+<p class="btns btn-no"><span><a href="#">No</a></span></p>
 <p class="btns btn-disconnect"><span><a href="#">Disconnect</a></span></p>
 </div>
 </div>
