add button "My Portal" in cms Home ( /cms/index.html )
fix PCS all button "Yes" at right 

add User Agreement and Privacy Policy URL in sign up(signin.html)

git-svn-id: http://everest.teltel.com:8080/repos/misc/9x9dev/trunk/nncms/src/main/webapp@4742 a0a5f996-2bb4-401c-8778-395c3c01700f

--- a/signin.html
+++ b/signin.html
@@ -127,7 +127,7 @@
             <br/>
             <p class="note">
             	<span id="signup-checkbox"></span>
-                <span id="signup-agree" class="langkey">I have read and accepted the User Agreement and Privacy Policy</span>
+                <span id="signup-agree" class="langkeyH">I have read and accepted the User Agreement and Privacy Policy</span>
             </p>
             <br/>
             <div id="signup-cancel" class="btn-white">
