--- a/store-manage.html
+++ b/store-manage.html
@@ -248,7 +248,7 @@
 <p class="content">Unsaved changes will be lost, are you sure you want to leave?</p>
 <div class="overlay-btn">
 <p class="btns btn-no"><span><a href="#">No</a></span></p>
-<p class="btns btn-leave"><span><a href="#">Leave</a></span></p>
+<p class="btns btn-leave"><span><a href="#">Yes</a></span></p>
 </div>
 </div>
 </div>
