--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
 <h3><a href="./">CMS</a></h3>
 <ul>
 <li class="on"><span><a href="./">My Channels</a></span></li>
+<li id="my-portal" class="hide"><span><a href="./portal-set.html">My Portal</a></span></li>
 </ul>
 <div class="studio-setup">
 <p class="btn-left"><span class="btn-right"><span class="btn-middle"><a href="#"><img src="images/icon_studio_setup.png" alt="" />CMS Setup</a></span></span></p>
