--- a/portal-manage.html
+++ b/portal-manage.html
@@ -376,8 +376,8 @@
 <a href="#" class="btn-close">Close</a>
 <p class="content">You will change the order of channel list to "update time", it will sort by update time of channels automatically so you can't change the order manually except set on top channels.</p>
 <div class="overlay-btn">
-<p class="btns btn-yes"><span><a href="#">Yes</a></span></p>
 <p class="btns btn-no"><span><a href="#">No</a></span></p>
+<p class="btns btn-yes"><span><a href="#">Yes</a></span></p>
 </div>
 </div>
 </div>
@@ -404,7 +404,7 @@
 <p class="content">Unsaved changes will be lost, are you sure you want to leave?</p>
 <div class="overlay-btn">
 <p class="btns btn-no"><span><a href="#">No</a></span></p>
-<p class="btns btn-leave"><span><a href="#">Leave</a></span></p>
+<p class="btns btn-leave"><span><a href="#">Yes</a></span></p>
 </div>
 </div>
 </div>
