--- a/brand-setting.html
+++ b/brand-setting.html
@@ -55,7 +55,7 @@
 <!-- Navigation Layer Begin -->
 <div id="studio-nav">
     <div class="studio-nav-wrap">
-        <h3><a href="./">Studio</a></h3>
+        <h3><a href="./">CMS</a></h3>
         <ul>
             <li><span><a href="index.html">My Channels</a></span></li>
             <li class="on"><span><a href="#">My Portal</a></span></li>
